--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Akshar:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Weather App</title>
+    <title>Simple Weather</title>
   </head>
   <body>
     <div id="root"></div>
